# cpp-starter-kit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ai.cpp  ai.h  main.cpp
